1.4.5
- Added compatibility for new Twitch encoder names.
1.4.4
- HTTPS fix for Linux users + Kodi Official repository compatibility fixes.
1.4.3
- various fixes to coincide with issues caused by evolving Twitch API
1.4.2
- Fixed incorrect default oauth value in settings
1.4.1
- Changes/updates to API calls in line with changes made by Twitch.
1.4.0
- Major code refactoring + IRC integration. Thanks to anxdpanic
1.3.3
- added French language
1.3.1
- fixed bug: addon would not play non-transcoded streams if requested quality was lower than source
1.3.0
- added ability to play new type twitch VODs + major code refactoring/optimisation and bug fixes (now utilising python-twitch [0.3.8] by ingwinlu). - ingwinlu
1.2.0
- fixed bug: removed error in code which prevented falling back to best available quality when preferred quality was not available
1.1.9
- fixed bug: past broadcasts were starting at second playlist item
1.1.8
- fixed unplayable streams issue due to Twich updates and various UI and error handling improvements, thx spiffomatic64, ntfwc, ingwinlu
1.1.7
- various UI and code optimisations + updated translations Thanks to ingwinlu, grocal, kokarn
1.1.6
- added Spanish language - thx G4RL1N
1.1.5
- Add listing streams by channel - thx ha107642
1.1.4
- added Czech language option - thx mCzolko
1.1.3
- added 'mobile (226p)' quality option
1.1.2
- major code optimisation to HLS playlist generation function - ingwinlu
1.1.1
- various bug fixes, code improvements
1.1.0
- added 'thumbnail' argument to enable support for third party skins + changed games list icon source for improved icons - Liquex
1.0.9
- added detection of restricted qualities (addon will now load best quality available if preferred quality is restricted) - MrSprigster
1.0.8
- version increment to force update on official xbmc repository
1.0.7
- fixed bug in quality settings
1.0.6
- rearranged string ids
1.0.5
- added ability to play archived videos (past broadcasts) - thx to Kr0nZ
1.0.4